# ha-google-home

./: .gitignore  .kodiak.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LOCALIZATION.md  README.md  hacs.json  image-with-prerequisites.dockerfile  pyproject.toml  requirements  setup.cfg  tox.ini
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml  labeler.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: issue.md  security-report.md
.github/actions/install-deps/: action.yml
.github/workflows/: constraints.txt  home-assistant.yml  labeler.yml  linting.yaml  manage-labels.yml  publish-docker.yml  publish-release.yml  release-drafter.yml  tests.yaml
custom_components/glocaltokens/: api.py  const.py  exceptions.py  manifest.json
custom_components/glocaltokens/translations/: en.json
custom_components/google-home/: exceptions.py
custom_components/google_home/: __init__.py  api.py  bluetooth.py  config_flow.py  const.py  entity.py  exceptions.py  manifest.json  models.py  number.py  sensor.py  services.yaml  switch.py  types.py  utils.py
custom_components/google_home/translations/: ca.json  da.json  de.json  en.json  es.json  fr.json  it.json  nb.json  nl.json  nn.json  pl.json  pt-BR.json  pt.json  ru.json  sensor.en.json  sk.json  uk.json
custom_components/ha-glocaltokens/: __init__.py  api.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  utils.py
custom_components/ha-glocaltokens/translations/: en.json
custom_components/ha-google-home/: __init__.py  api.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  utils.py
custom_components/ha-google-home/translations/: en.json
docs/: index.md
script/: publish_release.py
