[tool.poetry]
name = "google_home"
version = "0.0.0"
description = "Home Assistant Google Home community integration"
authors = ["Ilja Leiko <leikoilja@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "google_home", from = "custom_components"}]

[tool.poetry.dependencies]
python = "^3.11"
glocaltokens = "^0.7.0"
homeassistant = "2023.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
codespell = "^2.2.5"
flake8 = "^7.0.0"
flake8-bugbear = "^23.12.2"
flake8-comprehensions = "^3.14.0"
flake8-simplify = "^0.21.0"
flake8-use-fstring = "^1.4"
homeassistant-stubs = "^2023.11.0"
isort = "^5.13.2"
mypy = "^1.8"
pre-commit = "^3.6.0"
PyGithub = "^2.1"
pylint = "^3.0.3"
types-requests = "^2.31.0"
voluptuous-stubs = "^0.1.1"

[tool.pylint.messages_control]
# Reasons disabled:
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "duplicate-code",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true
known_first_party = [
    "homeassistant",
]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_no_return = true
warn_unreachable = true

[tool.codespell]
quiet-level = 2
skip = "poetry.lock,./.git/*,./.mypy_cache/*,*.json"
ignore-words-list = "hass"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
