[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "google_home"
version = "0.0.0"
description = "Home Assistant Google Home community integration"
authors = ["Ilja Leiko <leikoilja@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "google_home", from = "custom_components"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
glocaltokens = "^0.7.3"
homeassistant = "2024.11.0b0"

[tool.poetry.group.dev.dependencies]
codespell = "^2.3.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"
flake8-comprehensions = "^3.16.0"
flake8-simplify = "^0.21.0"
flake8-use-fstring = "^1.4"
homeassistant-stubs = "^2024.11.0b0"
mypy = "^1.13"
PyGithub = "^2.4"
pylint = "^3.3.1"
ruff = "^0.7.2"
types-requests = "<2.31.0.7"
voluptuous-stubs = "^0.1.1"

[tool.pylint.messages_control]
# Reasons disabled:
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "duplicate-code",
    "line-too-long",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
]

[tool.pylint.format]
max-line-length = 88

[tool.ruff]
required-version = ">=0.7.0"
target-version = "py312"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
known-first-party = [
    "homeassistant",
]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_no_return = true
warn_unreachable = true

[tool.codespell]
quiet-level = 2
skip = "poetry.lock,./.git/*,./.mypy_cache/*,*.json"
ignore-words-list = "hass"
